# irc-blowfish-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/irc_blowfish/: __init__.py  base64.py  crypt.py
tests/irc_blowfish/: test_base64.py  test_crypt.py
