[tool.poetry]
name = "irc-blowfish"
version = "1.0.0"
description = "IRC Blowfish library"
authors = ["IceN9ne <IceN9ne.code@gmail.com>"]
license = "MIT"
homepage = "https://github.com/IceN9ne/irc-blowfish-python"
repository = "https://github.com/IceN9ne/irc-blowfish-python"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
packages = [
    { include = "irc_blowfish", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^3.3.1"
more-itertools = "^8.6.0"
pytest-mock = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-comprehensions = "^3.3.1"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
flake8-use-fstring = "^1.1"
isort = "^5.7.0"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest = "^6.2.1"

[tool.isort]
profile="black"
src_paths="src"
line_length=120

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
